Trying another fix for the visibility issue with summary-table before the rewrite.
* web/stylesheets/main.css:
    - Changing the visibility CSS to use the class attribute.

* web/views/summary.html:
    - Changed the view to add a class attribute for use in CSS.

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -60,7 +60,7 @@ div.summary {
     visibility: hidden;
 }
 
-#summary-table div {
+div.summary-table {
     visibility: hidden;
 }
 
